--- a/index.html
+++ b/index.html
@@ -7,13 +7,28 @@
 
     <meta charset="UTF-8">
 
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+    <link rel="stylesheet" href="style/stylesheet.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-aria.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-messages.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-animate.min.js"></script>
+
+    <!-- Angular Material Library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
+
     <script src="index.js"></script>
 </head>
 
 <body ng-controller="homeCtrl">
-<div ng-view></div>
+<div class="wrapper">
+    <md-toolbar layout="row">
+        <h1>Magic2Nite?</h1>
+    </md-toolbar>
+    <div ng-view></div>
+</div>
 </body>
 
 </html>
