--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
     <link rel="stylesheet" href="style/stylesheet.css">
+    <script src="https://use.fontawesome.com/f424851547.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
@@ -24,10 +25,10 @@
 
 <body ng-controller="homeCtrl">
 <div class="wrapper">
-    <md-toolbar layout="row">
+    <md-toolbar layout="row" class="header">
         <h1>Magic2Nite?</h1>
     </md-toolbar>
-    <div ng-view></div>
+    <div ng-view class="contentDiv"></div>
 </div>
 </body>
 
